--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   # ui
-  lottie:
+  lottie: ^1.3.0
   # services
-  video_player: ^2.3.0
+  video_player: ^2.4.5
   http:
   get:
   wakelock:
